--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
     <div class="icon arrow"><i class="fas fa-arrow-left"></i></div>
     <div class="icon dots"><i class="fas fa-ellipsis-v"></i></div>
     <div class="name">CHEV Rathana</div>
-    <div class="about">Monitoring & Support</div>
+    <div class="about">ATM Technical Support</div>
     <div class="social-icons">
       <a href="#" class="facebook"><i class="fab fa-facebook"></i></a>
       <a href="#" class="telegram"><i class="fab fa-telegram"></i></a>
@@ -27,7 +27,7 @@
     <div class="buttons">
       <button
       class="btn btn-color-2"
-      onclick="window.open('./assets/CHEV Rathana_CV.pdf')"
+      onclick="window.open('./assets/CHEV Rathana_CV.pdf__404!')"
     >
       Download CV
     </button>
